--- a/2-Data Analysis/6-Bases de datos/SQL/Teoria/0-SQL en Python.ipynb
+++ b/2-Data Analysis/6-Bases de datos/SQL/Teoria/0-SQL en Python.ipynb
@@ -40,6 +40,47 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"\n",
+    "\n",
+    "# esta es para instalar el paquete de sqlserver\n",
+    "# !pip install pymssql\n",
+    "\n",
+    "#este es el codigo para conectar el sqlserver\n",
+    "\n",
+    "import pymssql\n",
+    "\n",
+    "# Establecer la conexión\n",
+    "conn = pymssql.connect(\n",
+    "    server='nombre_del_servidor',\n",
+    "    user='tu_usuario',\n",
+    "    password='tu_contraseña',\n",
+    "    database='nombre_de_la_base_de_datos'\n",
+    ")\n",
+    "\n",
+    "# Crear un cursor desde la conexión\n",
+    "cursor = conn.cursor()\n",
+    "\n",
+    "# Ejecutar una consulta\n",
+    "cursor.execute('SELECT * FROM tu_tabla')\n",
+    "\n",
+    "# Obtener los resultados\n",
+    "rows = cursor.fetchall()\n",
+    "\n",
+    "# Procesar los resultados\n",
+    "for row in rows:\n",
+    "    print(row)\n",
+    "\n",
+    "# Cerrar la conexión\n",
+    "conn.close()\n",
+    "\"\"\""
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -51,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +120,7 @@
        "'c:\\\\Bootcamp\\\\BootcampBBK\\\\2-Data Analysis\\\\6-Bases de datos\\\\SQL\\\\Teoria'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -91,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -4011,7 +4052,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -4029,16 +4070,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<sqlite3.Cursor at 0x782af6fb0b40>"
+       "<sqlite3.Cursor at 0x26fe6471e40>"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4072,7 +4113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
