--- a/2-Data Analysis/6-Bases de datos/SQL/Teoria/1-Construyendo nuestra BD.ipynb
+++ b/2-Data Analysis/6-Bases de datos/SQL/Teoria/1-Construyendo nuestra BD.ipynb
@@ -15,14 +15,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "import sqlite3\n",
+    "import pandas as pd\n",
     "\n",
     "# Connect to the DB\n",
-    "conn = sqlite3.connect(\"bbdd1.db\")\n",
+    "conn = sqlite3.connect(\"DB_EJERCICIO.db\")\n",
     "c = conn.cursor()"
    ]
   },
@@ -35,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,11 +58,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "query = \"\"\"\n",
+    "query_create = \"\"\"\n",
     "CREATE TABLE Categories\n",
     "(      \n",
     "    CategoryID INTEGER PRIMARY KEY AUTOINCREMENT,\n",
@@ -70,12 +71,12 @@
     ");\n",
     "\"\"\"\n",
     "\n",
-    "c.execute(query);"
+    "c.execute(query_create);"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -95,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +105,7 @@
        "[]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,20 +123,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "query = \"\"\"\n",
+    "query_insert = \"\"\"\n",
     "INSERT INTO Categories VALUES(null,'Beverages','Soft drinks, coffees, teas, beers, and ales');\n",
     "\"\"\"\n",
     "\n",
-    "c.execute(query);"
+    "c.execute(query_insert);"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +145,7 @@
        "[(1, 'Beverages', 'Soft drinks, coffees, teas, beers, and ales')]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -170,10 +171,10 @@
      "evalue": "UNIQUE constraint failed: Categories.CategoryID",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIntegrityError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[15], line 5\u001b[0m\n\u001b[1;32m      1\u001b[0m query \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\"\"\u001b[39m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;124mINSERT INTO Categories VALUES(1,\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mBeverages\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m,\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mSoft drinks, coffees, teas, beers, and ales\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m);\u001b[39m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;124m\"\"\"\u001b[39m\n\u001b[0;32m----> 5\u001b[0m \u001b[43mc\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mexecute\u001b[49m\u001b[43m(\u001b[49m\u001b[43mquery\u001b[49m\u001b[43m)\u001b[49m;\n",
-      "\u001b[0;31mIntegrityError\u001b[0m: UNIQUE constraint failed: Categories.CategoryID"
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIntegrityError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[8], line 5\u001b[0m\n\u001b[0;32m      1\u001b[0m query \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m\"\"\"\u001b[39m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;124mINSERT INTO Categories VALUES(1,\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mBeverages\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m,\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mSoft drinks, coffees, teas, beers, and ales\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m);\u001b[39m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;124m\"\"\"\u001b[39m\n\u001b[1;32m----> 5\u001b[0m c\u001b[38;5;241m.\u001b[39mexecute(query)\n",
+      "\u001b[1;31mIntegrityError\u001b[0m: UNIQUE constraint failed: Categories.CategoryID"
      ]
     }
    ],
@@ -187,7 +188,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -248,7 +249,7 @@
        "[]"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -259,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -292,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -301,7 +302,7 @@
        "[]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -312,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -344,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -366,7 +367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -403,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -448,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -472,85 +473,20 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>0</th>\n",
-       "      <th>1</th>\n",
-       "      <th>2</th>\n",
-       "      <th>3</th>\n",
-       "      <th>4</th>\n",
-       "      <th>5</th>\n",
-       "      <th>6</th>\n",
-       "      <th>7</th>\n",
-       "      <th>8</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Drinks</td>\n",
-       "      <td>Soft drinks, coffees, teas, beers, and ales</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Chais</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>10 boxes x 20 bags</td>\n",
-       "      <td>18</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Drinks</td>\n",
-       "      <td>Soft drinks, coffees, teas, beers, and ales</td>\n",
-       "      <td>2</td>\n",
-       "      <td>Chang</td>\n",
-       "      <td>1</td>\n",
-       "      <td>1</td>\n",
-       "      <td>24 - 12 oz bottles</td>\n",
-       "      <td>19</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>Condiments</td>\n",
-       "      <td>Sweet and savory sauces, relishes, spreads, an...</td>\n",
-       "      <td>3</td>\n",
-       "      <td>Aniseed Syrup</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>12 - 550 ml bottles</td>\n",
-       "      <td>10</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>2</td>\n",
-       "      <td>Condiments</td>\n",
-       "      <td>Sweet and savory sauces, relishes, spreads, an...</td>\n",
-       "      <td>4</td>\n",
-       "      <td>Chef Anton's Cajun Seasoning</td>\n",
-       "      <td>1</td>\n",
-       "      <td>2</td>\n",
-       "      <td>48 - 6 oz jars</td>\n",
-       "      <td>22</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   0           1                                                  2  3  \\\n",
-       "0  1      Drinks        Soft drinks, coffees, teas, beers, and ales  1   \n",
-       "1  1      Drinks        Soft drinks, coffees, teas, beers, and ales  2   \n",
-       "2  2  Condiments  Sweet and savory sauces, relishes, spreads, an...  3   \n",
-       "3  2  Condiments  Sweet and savory sauces, relishes, spreads, an...  4   \n",
-       "\n",
-       "                              4  5  6                    7   8  \n",
-       "0                         Chais  1  1   10 boxes x 20 bags  18  \n",
-       "1                         Chang  1  1   24 - 12 oz bottles  19  \n",
-       "2                 Aniseed Syrup  1  2  12 - 550 ml bottles  10  \n",
-       "3  Chef Anton's Cajun Seasoning  1  2       48 - 6 oz jars  22  "
+       "Empty DataFrame\n",
+       "Columns: []\n",
+       "Index: []"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -571,23 +507,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
-     "ename": "IntegrityError",
-     "evalue": "FOREIGN KEY constraint failed",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIntegrityError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[21], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[43mc\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mexecute\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\"\"\u001b[39;49m\u001b[38;5;124;43mDELETE FROM Categories WHERE CategoryID == 1\u001b[39;49m\u001b[38;5;124;43m\"\"\"\u001b[39;49m\u001b[43m)\u001b[49m\u001b[38;5;241m.\u001b[39mfetchall()\n",
-      "\u001b[0;31mIntegrityError\u001b[0m: FOREIGN KEY constraint failed"
-     ]
+     "data": {
+      "text/plain": [
+       "[]"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "c.execute(\"\"\"DELETE FROM Categories WHERE CategoryID == 1\"\"\").fetchall()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Empty DataFrame\n",
+      "Columns: [cid, name, type, notnull, dflt_value, pk]\n",
+      "Index: []\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Con esta función leemos los datos y lo pasamos a un DataFrame de Pandas y ejecutamos una sentencia\n",
+    "def sql_query(query):\n",
+    "\n",
+    "    # Ejecuta la query\n",
+    "    c.execute(query)\n",
+    "\n",
+    "    # Almacena los datos de la query \n",
+    "    ans = c.fetchall()\n",
+    "\n",
+    "    # Obtenemos los nombres de las columnas de la tabla\n",
+    "    names = [description[0] for description in c.description]\n",
+    "\n",
+    "    return pd.DataFrame(ans,columns=names)\n",
+    "\n",
+    "\n",
+    "\n",
+    "###### ejemplo para ejecutar el def sql_query\n",
+    "# Nombre de la tabla de la que quieres obtener los campos\n",
+    "nombre_tabla = 'EMPLOYEES'\n",
+    "\n",
+    "# Ejecutar la consulta PRAGMA para obtener la información de las columnas\n",
+    "query = f'PRAGMA table_info({nombre_tabla});'\n",
+    "df_columnas = sql_query(query)\n",
+    "\n",
+    "# Mostrar el DataFrame con la información de las columnas\n",
+    "print(df_columnas)"
    ]
   },
   {
@@ -599,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -632,7 +611,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
