--- a/2-Data Analysis/6-Bases de datos/SQL/Teoria/3-Transacciones.ipynb
+++ b/2-Data Analysis/6-Bases de datos/SQL/Teoria/3-Transacciones.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,16 +65,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('sqlite_sequence',), ('accounts',), ('account_changes',)]"
+       "[('accounts',), ('account_changes',), ('sqlite_sequence',)]"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,16 +116,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Defaulting to user installation because normal site-packages is not writeable\n",
+      "Requirement already satisfied: sqlalchemy in c:\\programdata\\anaconda3\\lib\\site-packages (2.0.25)\n",
+      "Requirement already satisfied: typing-extensions>=4.6.0 in c:\\programdata\\anaconda3\\lib\\site-packages (from sqlalchemy) (4.9.0)\n",
+      "Requirement already satisfied: greenlet!=0.4.17 in c:\\programdata\\anaconda3\\lib\\site-packages (from sqlalchemy) (3.0.1)\n"
+     ]
+    }
+   ],
    "source": [
     "# !pip install sqlalchemy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -136,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +196,7 @@
        "1         200    10100"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,7 +217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -285,7 +296,7 @@
        "1         200    11100"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -296,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -334,7 +345,7 @@
        "      <td>100</td>\n",
        "      <td>-</td>\n",
        "      <td>1000</td>\n",
-       "      <td>2024-05-23 16:20:37</td>\n",
+       "      <td>2024-06-07 17:06:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -342,7 +353,7 @@
        "      <td>200</td>\n",
        "      <td>+</td>\n",
        "      <td>1000</td>\n",
-       "      <td>2024-05-23 16:20:37</td>\n",
+       "      <td>2024-06-07 17:06:00</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -350,11 +361,11 @@
       ],
       "text/plain": [
        "   change_no  account_no flag  amount           changed_at\n",
-       "0          1         100    -    1000  2024-05-23 16:20:37\n",
-       "1          2         200    +    1000  2024-05-23 16:20:37"
+       "0          1         100    -    1000  2024-06-07 17:06:00\n",
+       "1          2         200    +    1000  2024-06-07 17:06:00"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -372,7 +383,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,7 +392,7 @@
     "try:\n",
     "    with conn:\n",
     "        c = conn.cursor()\n",
-    "        c.execute(\"BEGIN;\")\n",
+    "       # c.execute(\"BEGIN;\")\n",
     "        c.execute(\"INSERT INTO account_changes(account_no,flag,amount,changed_at)  VALUES(100,'-',(?),datetime('now'));\", (amount,))\n",
     "        c.execute(\"UPDATE accounts SET balance = balance - (?) WHERE account_no = 100;\", (amount,))\n",
     "except sqlite3.IntegrityError:\n",
@@ -390,7 +401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -428,7 +439,7 @@
        "      <td>100</td>\n",
        "      <td>-</td>\n",
        "      <td>1000</td>\n",
-       "      <td>2024-05-23 16:20:37</td>\n",
+       "      <td>2024-06-07 17:06:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -436,7 +447,7 @@
        "      <td>200</td>\n",
        "      <td>+</td>\n",
        "      <td>1000</td>\n",
-       "      <td>2024-05-23 16:20:37</td>\n",
+       "      <td>2024-06-07 17:06:00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -444,23 +455,7 @@
        "      <td>100</td>\n",
        "      <td>-</td>\n",
        "      <td>100</td>\n",
-       "      <td>2024-05-23 16:26:30</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>100</td>\n",
-       "      <td>-</td>\n",
-       "      <td>1000</td>\n",
-       "      <td>2024-05-23 16:26:56</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>100</td>\n",
-       "      <td>-</td>\n",
-       "      <td>100</td>\n",
-       "      <td>2024-05-23 16:27:36</td>\n",
+       "      <td>2024-06-07 17:06:38</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -468,14 +463,12 @@
       ],
       "text/plain": [
        "   change_no  account_no flag  amount           changed_at\n",
-       "0          1         100    -    1000  2024-05-23 16:20:37\n",
-       "1          2         200    +    1000  2024-05-23 16:20:37\n",
-       "2          3         100    -     100  2024-05-23 16:26:30\n",
-       "3          4         100    -    1000  2024-05-23 16:26:56\n",
-       "4          5         100    -     100  2024-05-23 16:27:36"
+       "0          1         100    -    1000  2024-06-07 17:06:00\n",
+       "1          2         200    +    1000  2024-06-07 17:06:00\n",
+       "2          3         100    -     100  2024-06-07 17:06:38"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -486,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -518,7 +511,7 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>100</td>\n",
-       "      <td>17900</td>\n",
+       "      <td>19000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -531,11 +524,11 @@
       ],
       "text/plain": [
        "   account_no  balance\n",
-       "0         100    17900\n",
+       "0         100    19000\n",
        "1         200    11100"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -553,12 +546,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "conn.close()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -577,7 +577,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.7"
   }
  },
  "nbformat": 4,
