--- a/2-Data Analysis/6-Bases de datos/SQL/Practica/Northwind/Challenge.ipynb
+++ b/2-Data Analysis/6-Bases de datos/SQL/Practica/Northwind/Challenge.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
     "with open(\"./data/northwind_script.sql\", 'r') as script:\n",
     "    lines = script.readlines()\n",
     "\n",
-    "c.execute(\"\"\"PRAGMA foreign_keys = ON;\"\"\")\n",
+    "#c.execute(\"\"\"PRAGMA foreign_keys = ON;\"\"\")\n",
     "\n",
     "c.executescript(\"\".join(lines));\n",
     "\n",
@@ -59,14 +59,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('Categories',),\n",
-       " ('sqlite_sequence',),\n",
+       "[('sqlite_sequence',),\n",
+       " ('CustomerCustomerDemo',),\n",
+       " ('CustomerDemographics',),\n",
+       " ('EmployeeTerritories',),\n",
+       " ('Regions',),\n",
+       " ('Territories',),\n",
+       " ('Categories',),\n",
        " ('Customers',),\n",
        " ('Employees',),\n",
        " ('Shippers',),\n",
@@ -76,7 +81,7 @@
        " ('OrderDetails',)]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,6 +268,41 @@
     "GROUP BY OrderDate\n",
     "\"\"\"\n",
     "pd.read_sql(query, con=connection)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Alphabetical list of products\n",
+      "Current Product List\n",
+      "Customer and Suppliers by City\n",
+      "Invoices\n",
+      "Orders Qry\n",
+      "Order Subtotals\n",
+      "Product Sales for 1997\n",
+      "Products Above Average Price\n",
+      "Products by Category\n",
+      "Quarterly Orders\n",
+      "Sales Totals by Amount\n",
+      "Summary of Sales by Quarter\n",
+      "Summary of Sales by Year\n",
+      "Category Sales for 1997\n",
+      "Order Details Extended\n",
+      "Sales by Category\n",
+      "ProductDetails_V\n"
+     ]
+    }
+   ],
+   "source": [
+    "res = c.execute(\"SELECT name FROM sqlite_master WHERE type='view'\")\n",
+    "for name in res:\n",
+    "    print(name[0])"
    ]
   },
   {
